Push initial draft of contribution guide